Bug 1406683 - Port bug 1400831 to TB: Use a shorter tab-drop-indicator image to fit both default and compact themes, and move its box-align to CSS. rs=jorgk

--- a/mail/base/content/tabmail.css
+++ b/mail/base/content/tabmail.css
@@ -61,6 +61,10 @@
   display: -moz-box;
 }
 
+.tab-drop-indicator-box {
+  -moz-box-align: end;
+}
+
 .tab-drop-indicator {
   position: relative;
   z-index: 2;
