Bug 1406994 - Show the .contentTabToolbox in Gloda search. r=jorgk

--- a/mail/themes/shared/mail/tabmail.css
+++ b/mail/themes/shared/mail/tabmail.css
@@ -302,7 +302,8 @@
 }
 
 /* Content Tabs */
-.contentTabToolbox {
+.chromeTabInstance[collapsed="false"] .contentTabToolbox,
+.contentTabInstance[collapsed="false"] .contentTabToolbox {
   display: none;
 }
 
