--- a/mail/themes/osx/mail/messageIcons.css
+++ b/mail/themes/osx/mail/messageIcons.css
@@ -78,18 +78,25 @@ treechildren::-moz-tree-image(subjectCol, replied, forwarded, focus, selected) {
 /* ..... attachment column ..... */
 
 .attachmentColumnHeader {
-  list-style-image: url(chrome://messenger/skin/icons/column-headers.png);
-  -moz-image-region: rect(0 16px 16px 0);
-  padding-inline-end: 5px;
+  list-style-image: url(chrome://messenger/skin/icons/attachment-col.svg);
+  padding-inline-start: 2px;
+  padding-inline-end: 3px;
+  -moz-context-properties: fill;
+  fill: currentColor;
 }
 
 treechildren::-moz-tree-image(attachmentCol, attach) {
-  list-style-image: url(chrome://messenger/skin/icons/threadpane-col.png);
-  -moz-image-region: rect(0 64px 16px 48px);
+  list-style-image: url(chrome://messenger/skin/icons/attachment-col.svg);
 }
 
 treechildren::-moz-tree-image(attachmentCol, attach, focus, selected) {
-  -moz-image-region: rect(16px 64px 32px 48px);
+  list-style-image: url(chrome://messenger/skin/icons/attachment-selected.svg);
+}
+
+treechildren::-moz-tree-image(attachmentCol),
+#threadCols > .attachmentColumnHeader > .treecol-icon {
+  width: 14px;
+  height: 14px;
 }
 
 /* ..... flag column ..... */
@@ -254,20 +261,6 @@ treechildren::-moz-tree-image(threadCol, ignoreSubthread) {
     -moz-image-region: rect(32px 96px 64px 64px);
   }
 
-  .attachmentColumnHeader {
-    list-style-image: url(chrome://messenger/skin/icons/column-headers@2x.png);
-    -moz-image-region: rect(0 32px 32px 0);
-  }
-
-  treechildren::-moz-tree-image(attachmentCol, attach) {
-    list-style-image: url(chrome://messenger/skin/icons/threadpane-col@2x.png);
-    -moz-image-region: rect(0 128px 32px 96px);
-  }
-
-  treechildren::-moz-tree-image(attachmentCol, attach, focus, selected) {
-    -moz-image-region: rect(32px 128px 64px 96px);
-  }
-
   .flagColumnHeader {
     list-style-image: url(chrome://messenger/skin/icons/column-headers@2x.png);
     -moz-image-region: rect(0 64px 32px 32px);
@@ -317,7 +310,6 @@ treechildren::-moz-tree-image(threadCol, ignoreSubthread) {
   #threadCols > treecol > .treecol-icon,
   treechildren::-moz-tree-image(threadCol, container),
   treechildren::-moz-tree-image(unreadButtonColHeader),
-  treechildren::-moz-tree-image(attachmentCol),
   treechildren::-moz-tree-image(flaggedCol),
   treechildren::-moz-tree-image(junkStatusCol),
   treechildren::-moz-tree-image(correspondentCol) {
