--- a/mail/themes/linux/mail/preferences/applications.css
+++ b/mail/themes/linux/mail/preferences/applications.css
@@ -41,7 +41,7 @@ menuitem[appHandlerIcon="save"] {
 
 richlistitem[appHandlerIcon="plugin"],
 menuitem[appHandlerIcon="plugin"] {
-  list-style-image: url("chrome://mozapps/skin/plugins/pluginGeneric-16.png");
+  list-style-image: url("chrome://mozapps/skin/plugins/pluginGeneric.svg");
 }
 
 .actionsMenu .menulist-icon {
