--- a/mail/themes/osx/mail/preferences/applications.css
+++ b/mail/themes/osx/mail/preferences/applications.css
@@ -40,7 +40,7 @@ menuitem[appHandlerIcon="save"] {
 
 richlistitem[appHandlerIcon="plugin"],
 menuitem[appHandlerIcon="plugin"] {
-  list-style-image: url("chrome://mozapps/skin/plugins/pluginGeneric-16.png");
+  list-style-image: url("chrome://mozapps/skin/plugins/pluginGeneric.svg");
 }
 
 .actionsMenu .menulist-icon {
