Bug 390753 - Make it possible to copy text from event summary dialog. r=philipp

--- a/calendar/base/themes/common/dialogs/calendar-event-dialog.css
+++ b/calendar/base/themes/common/dialogs/calendar-event-dialog.css
@@ -599,6 +599,13 @@ freebusy-day > box {
     min-height: 54px;
 }
 
+#calendar-summary-dialog .selectable-label,
+#calendar-event-summary-dialog .selectable-label,
+#calendar-task-summary-dialog .selectable-label {
+    background-color: inherit;
+    color: inherit;
+}
+
 #calendar-summary-dialog #item-start-row .headline,
 #calendar-event-summary-dialog #item-start-row .headline,
 #calendar-task-summary-dialog #item-start-row .headline,
