Bug 1408146 - Port bug 1391539 to TB: Show tab separators when hovering tabs. r=jorgk

--- a/mail/themes/osx/mail/tabmail.css
+++ b/mail/themes/osx/mail/tabmail.css
@@ -31,13 +31,9 @@
   list-style-image: url("chrome://messenger/skin/icons/item.png");
 }
 
-.tab-background[selected=true] {
-  border-inline-start-style: solid;
-}
-
-:root:-moz-any(:not([tabsintitlebar]), [sizemode=fullscreen]) .tabmail-tab:first-child >
-  .tab-stack > .tab-background[selected=true] {
-  border-inline-start-style: none;
+:root[tabsintitlebar]:not([sizemode=fullscreen]) .tabmail-tab[first-tab]::before {
+  content: '';
+  display: -moz-box;
 }
 
 .tabmail-tab[type="glodaSearch"] .tab-stack > .tab-content > .tab-icon-image {
