--- a/mail/themes/shared/mail/tabmail.css
+++ b/mail/themes/shared/mail/tabmail.css
@@ -3,6 +3,7 @@
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 #tabs-toolbar {
+  --tabs-top-border-width: 0px;
   --tab-toolbar-overlap: 1px;
 }
 
@@ -105,18 +106,19 @@
   background-clip: padding-box;
 }
 
+:root:not([tabsintitlebar]) #tabs-toolbar,
+#mail-toolbar-menubar2[toolbarname]:not([autohide=true]) ~ #tabs-toolbar {
+  --tabs-top-border-width: 1px;
+}
+
+:root:not([tabsintitlebar]) .tab-background,
 #mail-toolbar-menubar2[toolbarname]:not([autohide=true]) ~ #tabs-toolbar > .tabmail-tabs >
   .tabmail-tab > .tab-stack > .tab-background {
   border-top-style: solid;
 }
 
 .tab-background[selected=true] {
-  border-inline-end-style: solid;
-  border-color: var(--tabs-border);
-  border-image: linear-gradient(var(--tabs-border),
-                                var(--tabs-border) calc(100% - 1px - var(--tab-toolbar-overlap)),
-                                transparent calc(100% - 1px - var(--tab-toolbar-overlap)));
-  border-image-slice: 1;
+  border-top-color: var(--tabs-border);
   background-color: var(--toolbar-bgcolor);
   background-image: var(--toolbar-bgimage);
   background-repeat: repeat-x;
@@ -183,25 +185,46 @@
 }
 
 /* Tab separators */
+.tabmail-tab::after,
 .tabmail-tab::before {
-  margin-top: 5px;
-  margin-bottom: 4px;
-  margin-inline-start: -1px;
-  border-left: 1px solid currentColor;
-  opacity: 0;
+  border-left: 1px solid;
+  border-image: linear-gradient(transparent 5px,
+                                currentColor 5px,
+                                currentColor calc(100% - 5px),
+                                transparent calc(100% - 5px));
+  border-image-slice: 1;
+  opacity: 0.3;
+}
+
+/* Show full height tab separators on hover. */
+.tabmail-tab:not([selected=true]):last-child:hover::after,
+.tabmail-tab:not([selected]) + .tabmail-tab:not([selected]):hover::before,
+.tabmail-tab:not([selected]):hover + .tabmail-tab:not([selected])::before,
+:root[tabsintitlebar] #mail-toolbar-menubar2[autohide=true] ~ #tabs-toolbar > .tabmail-tabs > .tabmail-tab::after,
+:root[tabsintitlebar] #mail-toolbar-menubar2[autohide=true] ~ #tabs-toolbar > .tabmail-tabs > .tabmail-tab::before {
+  border-image: linear-gradient(transparent calc(1px + var(--tabs-top-border-width)),
+                                currentColor calc(1px + var(--tabs-top-border-width)),
+                                currentColor calc(100% - 1px - var(--tab-toolbar-overlap)),
+                                transparent calc(100% - 1px - var(--tab-toolbar-overlap)));
+  border-image-slice: 1;
+}
+
+/* Show full height tab separators on selected tabs. */
+.tabmail-tab[visuallyselected]::before,
+.tabmail-tab[visuallyselected]:last-child::after,
+.tabmail-tab[visuallyselected] + .tabmail-tab::before {
+  border-color: var(--tabs-border);
+  border-image: linear-gradient(transparent 1px,
+                                var(--tabs-border) 1px,
+                                var(--tabs-border) calc(100% - 1px - var(--tab-toolbar-overlap)),
+                                transparent calc(100% - 1px - var(--tab-toolbar-overlap))) 1 !important;
+  opacity: 1;
+}
+
+.tabmail-tab:last-child::after,
+.tabmail-tab + .tabmail-tab::before {
   content: '';
   display: -moz-box;
-}
-
-.tabmail-tab:not([selected]):not(:hover) +
-.tabmail-tab:not([selected]):not(:hover)::before {
-  opacity: 0.2;
-  transition: opacity 100ms ease;
-}
-
-:root[tabsintitlebar] #tabs-toolbar > .tabmail-tabs > .tabmail-tab::before {
-  margin-top: 0;
-  margin-bottom: 1px;
 }
 
 /**
