--- a/suite/themes/modern/communicator/search/searchbar.css
+++ b/suite/themes/modern/communicator/search/searchbar.css
@@ -47,8 +47,10 @@
   list-style-image: url("chrome://global/skin/icons/search.gif");
 }
 
-.search-go-button:-moz-system-metric(touch-enabled) {
-  padding: 0px 5px;
+@media (touch-enabled) {
+  .search-go-button {
+    padding: 0px 5px;
+  }
 }
 
 .search-go-button:-moz-locale-dir(rtl) {
