--- a/suite/themes/classic/mac/communicator/downloads/downloadmanager.css
+++ b/suite/themes/classic/mac/communicator/downloads/downloadmanager.css
@@ -85,8 +85,10 @@ treechildren::-moz-tree-progressmeter {
   margin-top: 3px;
 }
 
-treechildren:-moz-system-metric(mac-graphite-theme)::-moz-tree-progressmeter {
-  color: rgba(43, 71, 106, 0.5);
+@media (mac-graphite-theme) {
+  treechildren::-moz-tree-progressmeter {
+    color: rgba(43, 71, 106, 0.5);
+  }
 }
 
 treechildren:-moz-window-inactive::-moz-tree-progressmeter {
