--- a/mail/themes/windows/mail/messageIcons.css
+++ b/mail/themes/windows/mail/messageIcons.css
@@ -7,9 +7,11 @@
   padding-bottom: 3px;
 }
 
-:-moz-system-metric(windows-classic) .treecol-image image {
-  padding-inline-end: 1px;
-  padding-bottom: 2px;
+@media (-moz-windows-classic) {
+  .treecol-image image {
+    padding-inline-end: 1px;
+    padding-bottom: 2px;
+  }
 }
 
 /* ..... column picker ..... */
