--- a/suite/themes/classic/mac/communicator/downloads/downloadmanager.css
+++ b/suite/themes/classic/mac/communicator/downloads/downloadmanager.css
@@ -85,7 +85,7 @@ treechildren::-moz-tree-progressmeter {
   margin-top: 3px;
 }
 
-@media (-moz-mac-graphite-theme) {
+@media (mac-graphite-theme) {
   treechildren::-moz-tree-progressmeter {
     color: rgba(43, 71, 106, 0.5);
   }
